--- a/learning_logs/20260130.md
+++ b/learning_logs/20260130.md
@@ -7,4 +7,19 @@ git config user.name "내 깃허브 아이디"
 git config user.email "내 깃허브 이메일"
 git config user.name
 git config user.email
-다 하신 분은 github.com 들어가셔서 korit_12_python repsitory 를 생성
+다 하신 분은 github.com 들어가셔서 korit_12_python repository 를 생성
+```python
+def turn_right():
+    turn_left()
+    turn_left()
+    turn_left()
+while not at_goal():
+    if wall_on_right() and wall_in_front():
+        turn_left()
+    elif wall_on_right() and front_is_clear():
+        move()
+    elif right_is_clear():
+        turn_right()
+        move()
+```
+개빡치는 우수법
